Corrected the usability problems with back link and footer
It seems the extra padding around the footer was blocking the back link and submit button when the user edit page was minimized to some degree.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -170,5 +170,5 @@ body {
 
 .auth-links a {
   color: black;
-  font-size: 170%;
 }
+
